tdf#168818: handle multiline formulas when toggling reference

This is a longstanding TODO from commit 8204d322379cbc054fb834911d88fb0fe3b040c6
(ScInputHandler::UpdateFormulaMode() also for multi-line formulas, 2022-01-24).

Change-Id: Ic9872cd170bd71b0585b481677b620c97d68a9d7
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/195606
Tested-by: Jenkins
Reviewed-by: Mike Kaganski <mike.kaganski@collabora.com>
(cherry picked from commit 3d65a92eaba1b8a2aa90a6b5188c2631465c7f4d)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/195629
Reviewed-by: Xisco Fauli <xiscofauli@libreoffice.org>